gccida/g3/biv_total_increment
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/biv_total_increment/src/unroll.c:2923:1: error: use of undeclared identifier 'induction_1'
induction_1 *biv; // rbx 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/biv_total_increment/src/unroll.c:2923:14: error: use of undeclared identifier 'biv'; did you mean 'div'?
induction_1 *biv; // rbx 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/biv_total_increment/src/unroll.c:2928:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/biv_total_increment/src/unroll.c:2937:1: error: use of undeclared identifier 'biv'
biv = bl_0->biv; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/biv_total_increment/src/unroll.c:2939:6: error: use of undeclared identifier 'biv'; did you mean 'div'?
if ( biv ) 
     ^~~
     div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/biv_total_increment/src/unroll.c:2942:24: error: use of undeclared identifier 'biv'
for ( i = *( ( _BYTE *)biv + 100); ( i & 8) != 0; i = *( ( _BYTE *)biv + 100) ) 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/biv_total_increment/src/unroll.c:2942:68: error: use of undeclared identifier 'biv'
for ( i = *( ( _BYTE *)biv + 100); ( i & 8) != 0; i = *( ( _BYTE *)biv + 100) ) 
                                                                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/biv_total_increment/src/unroll.c:2945:6: error: use of undeclared identifier 'biv'
if ( biv->mult_val != const_int_rtx[65] || ( i & 0x20) != 0 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/biv_total_increment/src/unroll.c:2948:8: error: use of undeclared identifier 'biv'
mode = biv->mode; 
       ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/biv_total_increment/src/unroll.c:2949:11: error: use of undeclared identifier 'biv'
add_val = biv->add_val; 
          ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/biv_total_increment/src/unroll.c:2974:1: error: use of undeclared identifier 'biv'
biv = biv->next_iv; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/biv_total_increment/src/unroll.c:2974:7: error: use of undeclared identifier 'biv'
biv = biv->next_iv; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/biv_total_increment/src/unroll.c:2975:6: error: use of undeclared identifier 'biv'; did you mean 'div'?
if ( biv ) 
     ^~~
     div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/biv_total_increment/src/unroll.c:2980:1: error: use of undeclared identifier 'biv'
biv = biv->next_iv; 
^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/biv_total_increment/src/unroll.c:2980:7: error: use of undeclared identifier 'biv'
biv = biv->next_iv; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/biv_total_increment/src/unroll.c:2982:7: error: use of undeclared identifier 'biv'; did you mean 'div'?
if ( !biv ) 
      ^~~
      div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
16 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/biv_total_increment/src/obj/unroll.o] Error 1
